--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dylan作品集</title>
-    <link rel="stylesheet" href="//cdn.bootcss.com/normalize/4.1.1/normalize.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="header">
-        <h1>Dylan作品集</h1>        
+        <h1 class="center">Dylan作品集</h1>        
     </header>
     <div class="wp">
         <ul class="list">
             <li>
-                <a href="/lagou">仿拉勾网图片列表特效</a>
+                <a href="lagou">仿拉勾网图片列表特效</a>
             </li>
         </ul>
     </div>
