--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     </header>
     <div class="wp">
         <ul class="list">
-            <li>
-                <a href="lagou">仿拉勾网图片列表特效</a>
-            </li>
+            <li><a href="lagou">仿拉勾网图片列表特效</a></li>
+            <li><a href="onediv">One Div</a></li>
         </ul>
     </div>
 </body>
