--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
     <header id="header">
         <h1 class="center">Dylan作品集</h1>        
     </header>
     <div class="wp">
         <ul class="list">
             <li><a href="lagou">仿拉勾网图片列表特效</a></li>
-            <li><a href="onediv">One Div</a></li>
+            <li><a href="icon-css">One Div</a></li>
         </ul>
     </div>
 </body>
