--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <div class="wp">
         <ul class="list">
-            <li><a href="lagou">仿拉勾网图片列表特效</a></li>
-            <li><a href="icon-css">One Div</a></li>
+            <li><a class="a" href="lagou">仿拉勾网图片列表特效</a></li>
+            <li><a class="a" href="icon-css">使用一个div绘制icon图标</a></li>
         </ul>
     </div>
 </body>
