--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wp">
         <ul class="list">
             <li><a class="a" href="lagou">仿拉勾网图片列表特效</a></li>
-            <li><a class="a" href="http://k-dylan.github.io/icon-css">使用一个div绘制icon图标</a></li>
+            <li><a class="a" href="/icon-css">使用一个div绘制icon图标</a></li>
             <li><a class="a" href="magnify">仿淘宝图片放大镜效果</a></li>
         </ul>
     </div>
