--- a/magnify/index.html
+++ b/magnify/index.html
@@ -18,7 +18,7 @@
   </div>
 
   <script>
-    (function () {
+    window.onload = function () {
       var dome = document.getElementById('dome');
       var pic = document.getElementById('pic');
       var hot = document.createElement('span');
@@ -72,8 +72,7 @@
         hot.style.display = 'none';
         big.style.display = 'none';
       }
-      
-    })();
+    };
     
 
   </script>
